Fix the navbar size on mobile and add navbar Icon change

--- a/css/global/component.css
+++ b/css/global/component.css
@@ -13,7 +13,7 @@
 
 body{
     font-family: Inter;
-    /*background-color: var(--background-color);*/
+    background-color: var(--background-color);
 }
 
 a{
